<resources>
    <string name="app_name">Hangman</string>
    <string name="startButton">Start</string>
    <string name="hangmanTheGame">Hangman</string>
    <string name="aboutButton">About</string>
    <string name="aboutMeTextView">Made by: Dennis Fransén</string>
    <string name="toolBarTextView">Main menu</string>
    <string name="opensAboutActivity" translatable="false">Opens AboutActivity</string>
    <string name="guessButton">Guess</string>
    <string name="outputTextView" translatable="false">_ _ _ _ _ _ _</string>
    <string name="inputTextView">Type here...</string>
    <string name="toManyCharErrorMsg">You typed to many characters. Please try again.</string>
    <string name="display_hangman_image" translatable="false">Display hangman image</string>
    <string name="tries_left_text_view">%d tries left</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="result_word">The word was: %s</string>
    <string name="tries_result">Tries left: %d</string>
    <string name="you_won">You won!</string>
    <string name="you_lost">You lost!</string>
    <string name="info_button" translatable="false">info button</string>
    <string name="play_button" translatable="false">play button</string>
    <string name="game_icon_image" translatable="false">game icon image</string>
    <string name="result">Result</string>
    <string name="about">About</string>
    <string name="already_typed_letter">You have already guessed this letter!</string>
    <string name="go_back_to_main_menu">Go back to main menu</string>
    <string name="settings">Settings</string>
    <string name="switchEnableText">Enable Halloween theme</string>
    <string name="prefs_theme_key">theme</string>
    <string name="default_theme">Default Theme</string>
    <string name="halloween_theme">Halloween Theme</string>

    <string-array name="guessWords">
        <item>"awesome"</item>
        <item>"ability"</item>
        <item>"abortion"</item>
        <item>"about"</item>
        <item>"absolutely"</item>
        <item>"barrel"</item>
        <item>"basket"</item>
        <item>"bathroom"</item>
        <item>"beach"</item>
        <item>"body"</item>
        <item>"Closed"</item>
        <item>"clear"</item>
        <item>"classic"</item>
        <item>"clock"</item>
        <item>"coast"</item>
        <item>"door"</item>
        <item>"double"</item>
        <item>"drama"</item>
        <item>"dinner"</item>
        <item>"dirty"</item>
    </string-array>
</resources>
