<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".SettingsActivity">

    <android.support.v7.widget.Toolbar

        android:id="@+id/settingsToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/goBackBtn"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/go_back_to_main_menu"
            android:src="@drawable/arrowback"
            android:tint="@android:color/white"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="68dp" />

        <ImageView
            android:id="@+id/gameIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:contentDescription="@string/game_icon_image"
            android:padding="0dp"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="19dp" />

        <ImageButton
            android:id="@+id/infoToolbarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/info_button"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="2dp" />

        <ImageButton
            android:id="@+id/playToolbarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/play_button"
            app:srcCompat="@android:drawable/ic_media_play"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="2dp" />

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/defaultThemeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/info_button"
        android:padding="6dp"
        android:text="@string/default_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsToolbar" />

    <Button
        android:id="@+id/halloweenThemeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/info_button"
        android:padding="6dp"
        android:text="@string/halloween_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defaultThemeBtn" />
</android.support.constraint.ConstraintLayout>