<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".PlayFragment">

    <android.support.v7.widget.Toolbar

        android:id="@+id/playToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/gameIconImageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:contentDescription="@string/game_icon_image"
            android:padding="0dp"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="4dp" />


        <TextView
            android:id="@+id/playToolbarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="19dp" />

        <ImageButton
            android:id="@+id/infoToolbarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/info_button"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="2dp" />

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/guessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="232dp"
        android:background="@color/colorPrimary"
        android:text="@string/guessButton"
        android:theme="?attr/primaryButtonTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toEndOf="@+id/inputEditText"
        app:layout_constraintTop_toBottomOf="@+id/outputTextView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="248dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:background="@android:color/background_dark"
        android:ems="10"
        android:hint="@string/inputTextView"
        android:inputType="textCapWords"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputTextView"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="148dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:text="@string/outputTextView"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playToolbar" />

    <TextView
        android:id="@+id/triesLeftTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/tries_left_text_view"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEditText" />

    <TextView
        android:id="@+id/guessCharTextView"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/triesLeftTextView" />

    <ImageView
        android:id="@+id/hangmanImageView"
        android:layout_width="110dp"
        android:layout_height="86dp"
        android:contentDescription="@string/display_hangman_image"
        app:layout_constraintBottom_toTopOf="@+id/outputTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/picture_frame" />

</android.support.constraint.ConstraintLayout>