<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".ResultFragment">

    <android.support.v7.widget.Toolbar

        android:id="@+id/aboutToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backToolBarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/go_back_to_main_menu"
            android:src="@drawable/arrowback"
            android:tint="@android:color/white"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="71dp" />

        <ImageView
            android:id="@+id/gameIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:contentDescription="@string/game_icon_image"
            android:padding="0dp"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="19dp" />

        <ImageButton
            android:id="@+id/infoToolbarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/info_button"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="2dp" />

        <ImageButton
            android:id="@+id/playToolbarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/play_button"
            app:srcCompat="@android:drawable/ic_media_play"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="2dp" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:text="Won or Lost" />

    <Button
        android:id="@+id/backToMainMenuBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="@string/back_to_main_menu"
        android:theme="?attr/primaryButtonTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/theWordResultTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
        tools:text="The word was" />

    <TextView
        android:id="@+id/triesLeftResultTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theWordResultTextView"
        tools:text="Tries Left" />


</android.support.constraint.ConstraintLayout>